# aegis

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  DOCKER_TEST_EXECUTION.md  Dockerfile  Dockerfile.dev  Dockerfile.hf  LICENSE  Makefile  Phase3_QUICK_REFERENCE.md  README.hf.md  README.md  SECURITY.md  cliff.toml  docker-compose.demo.yml  docker-compose.yml  hooks.py  index.html  inside_pii_test.py  inside_test.py  mkdocs.yml  objects.inv  openapi-generator-config.yml  openapi.json  pyproject.toml  pyrightconfig.json  ruff.toml  sitemap.xml  test_pii_demo.py  test_showcase_local.py
.github/: PULL_REQUEST_TEMPLATE.md
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
SECURITY/: index.html
aegis-build-plan/: test-Agent_Instruction_Builder-v2.md  test-Architecture_Review_Board-v2.md  test-Executive_Summary-v2.md  test-Overview-v2.md  test-Solution_Architect-v2.md  test-Technical_Specification-v2.md
citation/: index.html
config/: model_registry.yaml  phase2-readiness.yaml  providers.yaml  workflows.yaml
docs/: .nojekyll  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHASE3_IMPLEMENTATION_SUMMARY.md  SECURITY.md  api.md  architecture.md  citation.md  development.md  hooks.py  index.md  langserve-api.md  langserve-integration.md  license.md  phase2-architecture.md
evals/: golden_dataset.py  runner.py  scorer.py
examples/: 01_governed_chat.py  02_approval_flow.py  03_mcp_tool.py  04_rag.py  05_residency.py  README.md  aegis.yaml
javascripts/: mermaid-extra.js
license/: index.html
prometheus/: prometheus.yml
scripts/: DEPLOY_FIX_TO_HF_SPACES.md  HF_SPACES_SYNC_README.md  _demo_server.py  demo.sh  diagnose-container.sh  export_openapi.py  fix-container-entrypoint.sh  init_db.sql  (+4 more)
sdk/python/: Dockerfile  pyproject.toml
sdk/python/src/aegis_sdk/: __init__.py  client.py  errors.py  models.py  types.py
sdk/python/tests/: test_async_client.py  test_client.py  test_sync_client.py
(+167 files in other folders)
