[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-gateway"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # Phase 2 — PII masking
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    # Phase 2 — Observability
    "prometheus-client>=0.20",
    # Phase 3 — RAG / pgvector
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
